# vllm-swift

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: baseline-2026-04-25-longctx-raw.json  baseline-2026-04-25-longctx-unique-raw.json  baseline-2026-04-25-raw.json  baseline-2026-04-25-unique-raw.json  baseline-2026-04-25.md  baseline-2026-04-26.md  baseline-2026-04-28.md
docs/: MODEL_COMPATIBILITY.md  PERFORMANCE.md  TROUBLESHOOTING.md
homebrew/: vllm-swift.rb
release-planning/v0.3.0/: 00-PLAN.md  01-VERSION-BUMP.md  02-TEST-PLAN.md  03-RELEASE-NOTES-DRAFT.md  04-EXPECTED-GAINS.md
release-planning/v0.5.1/: RELEASE-NOTES.md
research/: F85_V3_BENCH_RESULTS.md
scripts/: baseline_matrix.py  bench_mlx_lm.py  bench_throughput.py  bench_vllm_metal.py  build_bottle.sh  build_wheel.sh  detect_tool_parser.py  install.sh  test_b2_dense_baseline.py  test_batched_quality.py  test_chunked_prefill.py  test_f85v2_batched_quality.py
swift/: Package.resolved  Package.swift
swift/Sources/VLLMBridge/: Bridge.swift
swift/Tests/VLLMBridgeTests/: SymlinkResolutionTests.swift
tests/: test_cli.py  test_detect_reasoning_parser.py  test_detect_tool_parser.py  test_engine_bridge.py  test_hardening_against_llamacpp_bugs.py  test_install.py  test_install_smoke.py  test_known_parser_issues.py  test_longctx_endpoint.py  test_parser_detection_e2e.py  test_parser_registry_safety.py  test_response_rewriter.py  test_version_consistency.py
tests/fixtures/: README.md  request_hermes_uncapped.json  request_opencode_nemotron.json  response_hermes_json_leak.json  response_phi4_healthy_chat.json  response_phi4_pipe_leak.json  response_qwen3_coder_xml_leak.json  response_streaming_with_usage.txt  response_truncated_leak.json
tests/integration/: conftest.py  test_real_models_detection.py  test_real_server_e2e.py  test_turbo_kv_no_drift.py
tests/speculative_corpus/: README.md
tests/speculative_corpus/nonrepetitive/: creative_generation.txt  summarization_novel.txt  translation_fresh.txt
tests/speculative_corpus/repetitive/: chat_long_context_recall.txt  code_completion_shared_imports.txt  tool_call_patterns.txt
vllm_swift/: __init__.py  cli.py  detect_reasoning_parser.py  detect_tool_parser.py  engine_bridge.py  known_parser_issues.py  platform.py  response_rewriter.py  worker.py
